--- a/api_old/package.json
+++ b/api_old/package.json
@@ -40,9 +40,11 @@
     "@feathersjs/primus": "^3.2.7",
     "compression": "^1.7.3",
     "cors": "^2.8.5",
-    "feathers-knex": "^5.0.4",
+    "feathers-mongoose": "^7.3.1",
     "helmet": "^3.15.0",
     "knex": "^0.15.2",
+    "mongodb-core": "^3.1.11",
+    "mongoose": "^5.4.11",
     "serve-favicon": "^2.5.0",
     "sqlite3": "^4.0.4",
     "winston": "^3.0.0",
